# yocto-templates

./: Makefile  Makefile.am  README.md  configure.ac  hello-qt.pro  main.cpp
app/: Makefile.am
